[package]
name = "alert_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
moka = { version = "0.6.3", features = ["future"] }
tera = { version = "1", default-features = false }
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "time",
    "env-filter",
    "registry",
    "std",
] }
time = { version = "0.3.5", features = [
    "local-offset",
    "std",
    "formatting",
    "macros",
] }

chrono = "0.4"
tracing-appender = "0.2.0"

base64 = "0.13.0"
aes = "0.7.5"
block-modes = "0.8.1"
rand = "0.8"
bytebuffer = "0.2.1"

sha2 = "0.10.1"
